--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "jupyterWebCatConnect",
-    "version": "0.1.0",
-    "description": "A JupyterLab extension to submit notebook to webcat",
+    "name": "jupyterwebcatconnect",
+    "version": "1.0.1",
+    "description": "A JupyterLab extension to submit notebook to webcat.",
     "keywords": [
         "jupyter",
         "jupyterlab",
@@ -38,7 +38,7 @@
         "clean": "jlpm clean:lib",
         "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
         "clean:lintcache": "rimraf .eslintcache .stylelintcache",
-        "clean:labextension": "rimraf jupyterWebCatConnect/labextension jupyterWebCatConnect/_version.py",
+        "clean:labextension": "rimraf jupyterwebcatconnect/labextension jupyterwebcatconnect/_version.py",
         "clean:all": "jlpm clean:lib && jlpm clean:labextension && jlpm clean:lintcache",
         "eslint": "jlpm eslint:check --fix",
         "eslint:check": "eslint . --cache --ext .ts,.tsx",
@@ -100,12 +100,12 @@
                     "pip"
                 ],
                 "base": {
-                    "name": "jupyterWebCatConnect"
+                    "name": "jupyterwebcatconnect"
                 }
             }
         },
         "extension": true,
-        "outputDir": "jupyterWebCatConnect/labextension"
+        "outputDir": "jupyterwebcatconnect/labextension"
     },
     "eslintIgnore": [
         "node_modules",
